--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer style="margin-top: -40px;">
 	<p>Sign up below to get an email every time a new post drops on {{ .Site.Title }}</p>
-	<form name="email" method="POST" netlify>
+	<form name="email" method="POST" action="." netlify>
 			<label style="margin-right: 1px;">Email Address:</label>
 			<input type="text" name="email" style="font-family: inherit; font-size: 100%; color: #555"/>
 			<button type="submit" style="height: 30px; color: white; background-color: black; border: none;">Sign up</button>
