--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -2,7 +2,7 @@
 	<p>Sign up below to get an email every time a new post drops on {{ .Site.Title }}</p>
 	<form name="email" method="POST" netlify>
 			<label style="margin-right: 1px;">Email Address:</label>
-			<input type="text" name="email" style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px"/>
+			<input type="text" name="email" style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; border: 2px solid rgb(238, 238, 238);"/>
 			<button type="submit" style="height: 30px; color: white; background-color: black; border: none;">Sign up</button>
 	</form>
 </footer>
