--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -1,11 +1,32 @@
 <footer style="margin-top: -40px;">
-	<p>Sign up below to get an email every time a new post drops on {{ .Site.Title }}</p>
-	<form name="email" method="POST" action="thank-you" netlify>
-			<p style="display: none;">
-    		<label>Don’t fill this out if you're human: <input name="bot-field" /></label>
-  		</p>
-			<label style="margin-right: 1px;">Email Address:</label>
-			<input type="text" name="email" style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 7.5px;"/>
-			<button type="submit" style="height: 30px; color: white; background-color: black; border: none;">Sign up</button>
-	</form>
+  <p>
+    Sign up below to get an email every time a new post drops on {{ .Site.Title
+    }}
+  </p>
+  <form
+    name="email"
+    method="POST"
+    action="thank-you"
+    data-netlify-recaptcha="true"
+    netlify
+  >
+    <p style="display: none;">
+      <label
+        >Don’t fill this out if you're human: <input name="bot-field"
+      /></label>
+    </p>
+    <label style="margin-right: 1px;">Email Address:</label>
+    <input
+      type="text"
+      name="email"
+      style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 7.5px;"
+    />
+    <div data-netlify-recaptcha="true"></div>
+    <button
+      type="submit"
+      style="height: 30px; color: white; background-color: black; border: none;"
+    >
+      Sign up
+    </button>
+  </form>
 </footer>
