--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -6,7 +6,7 @@
   		</p>
 			<label style="margin-right: 1px;">Email Address:</label>
 			<input type="text" name="email" style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 7.5px;"/>
-			<div data-netlify-recaptcha="true"></div>
+			<div data-netlify-recaptcha="true" style="text-align: center;"></div>
 			<button type="submit" style="height: 30px; color: white; background-color: black; border: none;">Sign up</button>
 	</form>
 </footer>
