--- a/themes/tale/layouts/partials/head.html
+++ b/themes/tale/layouts/partials/head.html
@@ -30,4 +30,7 @@
 
 		{{ template "_internal/opengraph.html" . }}
 		{{ template "_internal/twitter_cards.html" . }}
+		<meta name="twitter:site" content="Digital Inklings" />
+		<meta name="twitter:creator" content="Owen Auch" />
+		<meta property="twitter:url" content="{{ .Permalink }}" />
 	</head>
