--- a/themes/tale/layouts/partials/head.html
+++ b/themes/tale/layouts/partials/head.html
@@ -31,6 +31,6 @@
 		{{ template "_internal/opengraph.html" . }}
 		{{ template "_internal/twitter_cards.html" . }}
 		<meta name="twitter:site" content="Digital Inklings" />
-		<meta name="twitter:creator" content="Owen Auch" />
+		<meta name="twitter:creator" content="owenauch" />
 		<meta property="twitter:url" content="{{ .Permalink }}" />
 	</head>
