--- a/themes/tale/layouts/_default/single.html
+++ b/themes/tale/layouts/_default/single.html
@@ -1,24 +1,24 @@
 {{ define "main" }}
 
 <main>
-	<div class="post">
-		{{ partial "single/title.html" . }}
+  <div class="post">
+    {{ partial "single/title.html" . }} {{ partial "single/header.html" . }}
 
-		{{ partial "single/header.html" . }}
+    <img
+      src="{{ index (.Params.Images) 0}}"
+      style="width: 100%; margin-bottom: 25px;"
+    />
 
-		{{ .Content }}
+    {{ .Content }} {{ partial "single/footer.html" . }}
+  </div>
 
-		{{ partial "single/footer.html" . }}
-	</div>
-
-	<div class="pagination">
-		{{- if .PrevPage }}
-		<a href="{{ .PrevPage.RelPermalink }}" class="left arrow">&#8592;</a>
-		{{- end }}
-		{{- if .NextPage }}
-		<a href="{{ .NextPage.RelPermalink }}" class="right arrow">&#8594;</a>
-		{{- end }}
-	</div>
+  <div class="pagination">
+    {{- if .PrevPage }}
+    <a href="{{ .PrevPage.RelPermalink }}" class="left arrow">&#8592;</a>
+    {{- end }} {{- if .NextPage }}
+    <a href="{{ .NextPage.RelPermalink }}" class="right arrow">&#8594;</a>
+    {{- end }}
+  </div>
 </main>
 
 {{ end }}
