--- a/themes/tale/static/css/fonts.css
+++ b/themes/tale/static/css/fonts.css
@@ -40,3 +40,9 @@
     url('/fonts/libre-baskerville-v7-latin-italic.svg#LibreBaskerville') format('svg'); /* Legacy iOS */
 }
 
+
+@media (max-width: 750px) {
+    .post-title {
+          font-size: 2.4rem;
+     }
+}
