--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -7,7 +7,7 @@
 			<label style="margin-right: 1px;">Email Address:</label>
 			<input type="text" name="email" style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 15px;"/>
 			<div data-netlify-recaptcha="true" style="justify-content: center; display: flex; margin-bottom: 15px;"></div>
-			<p>Also sorry about the annoying captcha</p>
+			<p>Sorry about the annoying captcha</p>
 			<button type="submit" style="height: 30px; color: white; background-color: black; border: none;">Sign up</button>
 	</form>
 </footer>
