links to introduction

--- a/themes/tale/layouts/partials/header.html
+++ b/themes/tale/layouts/partials/header.html
@@ -3,7 +3,9 @@
 				<a href="{{ "/" | relURL }}">
 					<h2 class="nav-title">{{ .Site.Title }}</h2>
 				</a>
-				<h4 style="align-self: flex-start;">About</h3>
+				<a style="align-self: center; margin: 0" href="/introducing-digital-inklings/">
+					<h4 style="margin: 0">About</h3>
+				</a>
 				{{ partial "header-menu.html" . }}
 			</div>
 		</nav>
