--- a/themes/tale/layouts/partials/header.html
+++ b/themes/tale/layouts/partials/header.html
@@ -3,7 +3,7 @@
 				<a href="{{ "/" | relURL }}">
 					<h2 class="nav-title">{{ .Site.Title }}</h2>
 				</a>
-				<a style="align-self: center; margin: 0" href="/introducing-digital-inklings/">
+				<a class="about-link" style="align-self: center; margin: 0" href="/introducing-digital-inklings/">
 					<h4 style="margin: 0">About</h3>
 				</a>
 				{{ partial "header-menu.html" . }}
