link to newsletter works

--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer style="margin-top: -40px;">
 	<p>Sign up below to get an email every time a new post drops on {{ .Site.Title }}</p>
-	<form name="email" method="POST" action="thank-you" data-netlify-recaptcha="true" netlify>
+	<form name="email" method="POST" action="thank-you" data-netlify-recaptcha="true" id="newsletter-form" netlify>
 			<p style="display: none;">
     		<label>Don’t fill this out if you're human: <input name="bot-field" /></label>
   		</p>
