--- a/themes/tale/layouts/partials/head.html
+++ b/themes/tale/layouts/partials/head.html
@@ -33,4 +33,5 @@
 		<meta name="twitter:site" content="Digital Inklings" />
 		<meta name="twitter:creator" content="owenauch" />
 		<meta property="twitter:url" content="{{ .Permalink }}" />
+		<meta name="google-site-verification" content="Ir3ql84eIFwoUnFsoMWmJU57UTYqTY0As3IIPf2MdfU" />
 	</head>
