--- a/themes/tale/layouts/partials/header.html
+++ b/themes/tale/layouts/partials/header.html
@@ -9,7 +9,7 @@
 					</a>
 					<p style="margin: 0 10px; color: black">|</p>
 					<a class="about-link" href="#newsletter-form" style="align-self: center;">
-						<h4 style="margin: 0">Newsletter</h3>
+						<h4 style="margin: 0">Subscribe</h3>
 					</a>
 				<div>
 				{{ partial "header-menu.html" . }}
