try removing recaptcha

--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -7,7 +7,7 @@
     name="email"
     method="POST"
     action="thank-you"
-    data-netlify-recaptcha="true"
+    data-netlify-recaptcha="false"
     id="newsletter-form"
     netlify
   >
@@ -26,7 +26,7 @@
       data-netlify-recaptcha="true"
       style="justify-content: center; display: flex; margin-bottom: 15px;"
     ></div>
-    <p>Sorry about the annoying captcha</p>
+    <!-- <p>Sorry about the annoying captcha</p> -->
     <button
       type="submit"
       style="height: 30px; color: white; background-color: black; border: none;"
