try removing recaptcha

--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -23,7 +23,7 @@
       style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 15px; border-color: black;"
     />
     <div
-      data-netlify-recaptcha="true"
+      data-netlify-recaptcha="false"
       style="justify-content: center; display: flex; margin-bottom: 15px;"
     ></div>
     <!-- <p>Sorry about the annoying captcha</p> -->
