--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -7,7 +7,7 @@
     name="email"
     method="POST"
     action="thank-you"
-    data-netlify-recaptcha="false"
+    data-netlify-recaptcha="true"
     id="newsletter-form"
     netlify
   >
@@ -23,10 +23,10 @@
       style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 15px; border-color: black;"
     />
     <div
-      data-netlify-recaptcha="false"
+      data-netlify-recaptcha="true"
       style="justify-content: center; display: flex; margin-bottom: 15px;"
     ></div>
-    <!-- <p>Sorry about the annoying captcha</p> -->
+    <p>Sorry about the annoying captcha</p>
     <button
       type="submit"
       style="height: 30px; color: white; background-color: black; border: none;"
