push dog question

--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -16,17 +16,24 @@
         >Don’t fill this out if you're human: <input name="bot-field"
       /></label>
     </p>
-    <label style="margin-right: 1px;">Email Address:</label>
+    <label style="margin-right: 1px;">Email Address</label>
+  </br>
     <input
       type="text"
       name="email"
-      style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 15px; border-color: black;"
+      style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 15px; border-color: black; margin-top: 5px;"
+    />
+  </br>
+    <label style="margin-right: 1px;">What's the three letter word for the animal that says "woof"?</label>
+  </br>
+    <input
+      type="text"
+      name="confirm"
+      style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 15px; border-color: black; margin-top: 5px;"
     />
     <div
-      data-netlify-recaptcha="true"
       style="justify-content: center; display: flex; margin-bottom: 15px;"
     ></div>
-    <p>Sorry about the annoying captcha</p>
     <button
       type="submit"
       style="height: 30px; color: white; background-color: black; border: none;"
