--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -4,7 +4,7 @@
     {{ .Site.Title }}
   </p>
   <form
-    name="email"
+    name="email2"
     method="POST"
     action="thank-you"
     data-netlify-recaptcha="true"
