--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -4,10 +4,9 @@
     {{ .Site.Title }}
   </p>
   <form
-    name="email2"
+    name="email"
     method="POST"
     action="thank-you"
-    data-netlify-recaptcha="true"
     id="newsletter-form"
     netlify
   >
