--- a/themes/tale/layouts/partials/footer.html
+++ b/themes/tale/layouts/partials/footer.html
@@ -23,7 +23,7 @@
       style="font-family: inherit; font-size: 100%; color: #555; min-width: 250px; margin-bottom: 15px; border-color: black; margin-top: 5px;"
     />
   </br>
-    <label style="margin-right: 1px;">What's the three letter word for the animal that says "woof"?</label>
+    <a href="/my-messy-analytics-breakup/#update-8-2-2020"><label style="margin-right: 1px;">What's the (lowercase) three letter word for the animal that says "woof"?</label></a>
   </br>
     <input
       type="text"
